Fix hidden horizontal scrollbar

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -128,7 +128,7 @@ a {
       left: 1px;
       bottom: 1px;
       text-align: center;
-      right: 21px;
+      right: 34px;
       height: 25px;
       line-height: 1.7;
       font-size: 15px;
@@ -139,6 +139,7 @@ a {
     cursor: pointer;
     background-color: rgba(241, 241, 241, 1);
     color: #333;
+    margin-bottom: 10px;
   }
 
   #processing {
